--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>UX Design</h6>
+                        <h6>Statistical Analysis</h6>
                         <p class="subtitle"> exercitat Repellendus,  corrupt.</p>
                         <hr>
                     </div>
@@ -105,7 +105,7 @@
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Web Development</h6>
+                        <h6>Data Visualization</h6>
                         <p class="subtitle">Lorem ipsum dolor sit consectetur.</p>
                         <hr>
                     </div>
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Digital Marketing</h6>
+                        <h6>Machine Learning </h6>
                         <p class="subtitle">voluptate commodi illo voluptatib.</p>
                         <hr>
                     </div>
