--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2017 - Present</h6>
-                            <P>UX Developer</P>
+                            <h6 class="title text-danger">Dec 2022 - Present</h6>
+                            <P>Data Scientist</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             <hr>
-                            <h6 class="title text-danger">2016 - 2017</h6>
+                            <h6 class="title text-danger">Aug 2022 - Dec 2022</h6>
                             <P>Front-end Developer</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             <hr>
-                            <h6 class="title text-danger">2015 - 2016</h6>
+                            <h6 class="title text-danger">Sept 2021 - Aug 2021</h6>
                             <P>UX Designer</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                         </div>
