--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="card">
                        <div class="card-header">
                             <div class="mt-2">
-                                <h4>Expertise</h4>
+                                <h4>Work Experience</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             <hr>
                             <h6 class="title text-danger">Sept 2021 - Aug 2021</h6>
-                            <P>UX Designer</P>
+                            <P>Scrum Master / Software Development</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                         </div>
                     </div>
