--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             <hr>
                             <h6 class="title text-danger">Aug 2022 - Dec 2022</h6>
-                            <P>Front-end Developer</P>
+                            <P>Data Scientist</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             <hr>
                             <h6 class="title text-danger">Sept 2021 - Aug 2021</h6>
@@ -159,16 +159,20 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2017 - Present</h6>
-                            <P>B.E Computer Engineering</P>
+                            <h6 class="title text-danger">2019 - Present</h6>
+                            <P>PhD in Nuclear Physics</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corrupti recusandae obcaecati odit repellat ducimus cum, minus tempora aperiam at.</P>
                             <hr>
                             <h6 class="title text-danger">2016 - 2017</h6>
-                            <P>Diploma in Computer Engineering</P>
+                            <P>Master's Degreee in Biomedical Engineering</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, id officiis quas placeat quia voluptas dolorum rem animi nostrum quae.aliquid repudiandae saepe!.</P>
                             <hr>
-                            <h6 class="title text-danger">2015 - 2016</h6>
-                            <P>High School Degree</P>
+                            <h6 class="title text-danger">2010 - 2015</h6>
+                            <P>Graduated Course in Artificial Intelligence and Machine Learning</P>
+                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <hr>
+                            <h6 class="title text-danger">2010 - 2015</h6>
+                            <P>Bachelor's Degree in Physics</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             
                         </div>
