--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <ul class="navbar-nav brand">
                     <img src="assets/imgs/avatar.png" alt="" class="brand-img">
                     <li class="brand-txt">
-                        <h5 class="brand-title">John Doe</h5>
-                        <div class="brand-subtitle">Web Designer | Developer</div>
+                        <h5 class="brand-title">Cristian Griebler</h5>
+                        <div class="brand-subtitle">Data Scientist | Data Engineer</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -146,6 +146,10 @@
                             <hr>
                             <h6 class="title text-danger">Sept 2021 - Aug 2021</h6>
                             <P>Scrum Master / Software Development</P>
+                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <hr>
+                            <h6 class="title text-danger">Feb 2020 - Sept 2022</h6>
+                            <P>Physics and Math Teacher</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                         </div>
                     </div>
