--- a/index.html
+++ b/index.html
@@ -453,16 +453,16 @@
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".new" class="active">
-                        New
+                        Data cleaning and Analysis
                     </a>
                     <a href="#" data-filter=".advertising">
-                        Advertising
+                        Data Visualization
                     </a>
                     <a href="#" data-filter=".branding">
-                        Branding
+                        Dashboards
                     </a>
                     <a href="#" data-filter=".web">
-                        Web
+                        Deploy
                     </a>
                 </div>
                 <div class="portfolio-container"> 
