--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".new" class="active">
-                        Data cleaning and Analysis
+                        Data Analysis
                     </a>
                     <a href="#" data-filter=".advertising">
                         Data Visualization
