--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <h1 class="mb-5"><span class="text-danger">My</span> Portfolio</h1>
             <div class="portfolio">
                 <div class="filters">
-                    <a href="#" data-filter=".new" class="active">
+                    <a href="#" data-filter=".eng" class="active">
                         Data Engineering
                     </a>
                     <a href="#" data-filter=".advertising">
@@ -384,19 +384,19 @@
                     </a>
                 </div>
                 <div class="portfolio-container"> 
-                    <div class="col-md-6 col-lg-4 web new">
+                    <div class="col-md-6 col-lg-4 web eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/oil_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/oil_23.png"></a>
+                                <a class="img-popup" href="https://github.com/crisGriebler/stock_analysis/blob/main/oil_stocks.ipynb"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Jupyter notebook</h6>
-                                    <p class="subtitle">Oil and gas Industry Analysis!</p>
+                                    <h6 class="title">Oil and gas Industry Analysis</h6>
+                                    <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div>   
                         </div>             
                     </div>
-                    <div class="col-md-6 col-lg-4 web new">
+                    <div class="col-md-6 col-lg-4 web eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
@@ -408,14 +408,14 @@
                             </div> 
                         </div>                         
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    <div class="col-md-6 col-lg-4 advertising">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                         
+                            <img src="assets/imgs/heatmap_retail.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                         
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-2.jpg"></a>
+                                <a class="img-popup" href="https://github.com/crisGriebler/stock_analysis/blob/main/retail_stocks.ipynb"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSTISING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">Retail stocks Analysis</h6>
+                                    <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div>    
                         </div>              
@@ -445,7 +445,7 @@
                             </div>
                         </div>                                                       
                     </div> 
-                    <div class="col-md-6 col-lg-4 web new">
+                    <div class="col-md-6 col-lg-4 web eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
                            <div class="content-holder">
@@ -457,7 +457,7 @@
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    <div class="col-md-6 col-lg-4 advertising eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
                            <div class="content-holder">
@@ -469,7 +469,7 @@
                             </div>
                         </div>                                                       
                     </div> 
-                    <div class="col-md-6 col-lg-4 advertising new"> 
+                    <div class="col-md-6 col-lg-4 advertising eng"> 
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">            
                             <div class="content-holder">
@@ -482,7 +482,7 @@
                         </div>
                                 
                     </div> 
-                    <div class="col-md-6 col-lg-4 branding new">
+                    <div class="col-md-6 col-lg-4 branding eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/branding-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                        
                             <div class="content-holder">
