--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/oil_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
-                                <a class="img-popup" href="https://github.com/crisGriebler/stock_analysis/blob/main/oil_stocks.ipynb"></a>
+                                <a class="social-link" href="https://github.com/crisGriebler/stock_analysis/blob/main/oil_stocks.ipynb"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Oil and gas Industry Analysis</h6>
                                     <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
