--- a/index.html
+++ b/index.html
@@ -532,12 +532,12 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 branding">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-5.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
+                            <img src="assets/imgs/spleen.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-5.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/spleen.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">Deep Learning</h6>
+                                    <p class="subtitle">UNET, matplotlib, Pytorch, Keras and Monai</p>
                                 </div>
                             </div>
                         </div>                                                   
