--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
                 <h3 class="font-weight-light">My Expertise</h3>
                 <span class="line mb-5"></span>
                 <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
+                    <div class="col-1 text-danger pt-1"><i class="ti-vector icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Statistical Analysis</h6>
+                        <h6>Data Science</h6>
                         <p class="subtitle"> exercitat Repellendus,  corrupt.</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
+                    <div class="col-1 text-danger pt-1"><i class="ti-bar-chart icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Data Visualization</h6>
+                        <h6>Data Analysis</h6>
                         <p class="subtitle">Lorem ipsum dolor sit consectetur.</p>
                         <hr>
                     </div>
@@ -352,7 +352,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="card mb-5">
                        <div class="card-header has-icon">
-                            <i class="ti-support text-danger" aria-hidden="true"></i>
+                            <i class="ti-stats-up text-danger" aria-hidden="true"></i>
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Machine learning project</h5>
@@ -530,7 +530,7 @@
                             </div>
                         </div>                                                      
                     </div> 
-                    <div class="col-md-6 col-lg-4 branding">
+                    <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
                             <img src="assets/imgs/spleen.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
                             <div class="content-holder">
