--- a/index.html
+++ b/index.html
@@ -376,9 +376,6 @@
                     <a href="#" data-filter=".advertising">
                         Data Science
                     </a>
-                    <a href="#" data-filter=".branding">
-                        Dashboards
-                    </a>
                     <a href="#" data-filter=".web">
                         Machine Learning Project
                     </a>
@@ -408,7 +405,7 @@
                             </div> 
                         </div>                         
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising">
+                    <div class="col-md-6 col-lg-4 web eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/heatmap_retail.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                         
                             <div class="content-holder">
@@ -433,7 +430,7 @@
                         </div>                                                     
                     </div>
 
-                    <div class="col-md-6 col-lg-4 advertising"> 
+                    <div class="col-md-6 col-lg-4 web eng"> 
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
                             <div class="content-holder">
@@ -457,7 +454,7 @@
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising eng">
+                    <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
                            <div class="content-holder">
@@ -469,7 +466,7 @@
                             </div>
                         </div>                                                       
                     </div> 
-                    <div class="col-md-6 col-lg-4 advertising eng"> 
+                    <div class="col-md-6 col-lg-4 eng"> 
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">            
                             <div class="content-holder">
