--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Data Engineering</h5>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                            <P class="subtitle">Proficient in designing and implementing scalable data architectures and pipelines to support efficient data storage, processing, and retrieval. Skilled in working with big data technologies, such as Hadoop and Spark, to handle large volumes of data. Experienced in data modeling, schema design, and database optimization for improved performance. Familiar with cloud-based data platforms, such as AWS, Azure, and GCP, and skilled in leveraging their services for data storage, computation, and analytics. Strong understanding of data warehousing concepts and ETL processes.</P>
                         </div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Data cleaning and transformation (ETL)</h5>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                            <P class="subtitle">Proficient in extracting, transforming, and loading (ETL) data from various sources to ensure accuracy, consistency, and quality. Skilled in identifying and handling missing values, outliers, duplicates, and inconsistencies. Experienced in integrating and standardizing data from multiple sources to create a unified and reliable dataset for analysis. Proficient in using ETL tools and techniques to enhance data integrity and enable accurate reporting and decision-making.</P>
                         </div>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Data Analysis</h5>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                            <P class="subtitle">With my background in Physics and Statistics , I have a solid foundation in data analysis techniques. I can efficiently extract meaningful insights from complex datasets, enabling me to make data-driven decisions. Also, my proficiency in Python and SQL further enhances my ability to query and manipulate data efficiently.</P>
                         </div>
                     </div>
                 </div>
@@ -355,8 +355,8 @@
                             <i class="ti-stats-up text-danger" aria-hidden="true"></i>
                         </div>
                         <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Machine learning project</h5>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                            <h5 class="mb-3 card-title text-dark">Machine learning </h5>
+                            <P class="subtitle">Machine Learning and AI: I have a strong foundation in machine learning techniques, with expertise in developing and deploying regression and classification models. My understanding of these models allows me to effectively solve real-world problems by predicting outcomes and classifying data. Additionally, my knowledge of Convolutional Neural Networks (CNN) indicates my competence in computer vision and image analysis tasks.</P>
                         </div>
                     </div>
                 </div>
@@ -377,7 +377,7 @@
                         Data Science
                     </a>
                     <a href="#" data-filter=".web">
-                        Machine Learning Project
+                        Machine Learning 
                     </a>
                 </div>
                 <div class="portfolio-container"> 
@@ -521,8 +521,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">Deep Learning</h6>
+                                    <p class="subtitle">NLP!</p>
                                 </div>
                             </div>
                         </div>                                                      
