--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                             <div class="m-auto"><i class="ti-layers-alt icon-xl"></i></div>
                         </div>
                         <div class="col-7 text-left py-3">
-                            <h1 class="text-danger font-weight-bold font40">3 years</h1>
-                            <p class="text-light mb-1">Experience</p>
+                            <h1 class="text-danger font-weight-bold font40">3</h1>
+                            <p class="text-light mb-1">Years of Experience</p>
                         </div>
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Data Science</h5>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                            <P class="subtitle">Proficient in applying statistical analysis, machine learning, and data mining techniques to extract insights and make data-driven decisions. Skilled in data preprocessing and feature engineering to optimize data for modeling. Experienced in developing and implementing predictive models, such as regression, classification, and clustering algorithms, to solve business problems. Proficient in programming languages, such as Python and SQL, for data manipulation, analysis, and model development. Familiar with deep learning frameworks, such as TensorFlow and PyTorch, for advanced modeling tasks. Strong understanding of statistical concepts and hypothesis testing. Experienced in data visualization to effectively communicate findings to non-technical stakeholders.</P>
                         </div>
                     </div>
                 </div>
