--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="card-body">
                             <h6 class="title text-danger">Dec 2022 - Present</h6>
                             <P>Data Scientist</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">Develop and implement ETL processes to extract, transform, and load healthcare data from diverse sources. Collaborate with software engineers to design and develop data-driven applications and platforms. Apply statistical analysis and machine learning techniques to derive insights from healthcare data. Create visualizations and reports to communicate complex data insights to stakeholders. Ensure compliance with data privacy regulations and ethical considerations in handling sensitive healthcare data.</P>
                             <hr>
                             <h6 class="title text-danger">Aug 2022 - Dec 2022</h6>
                             <P>Data Scientist</P>
