--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">Dec 2022 - Present</h6>
-                            <P>Data Scientist</P>
+                            <P>Data Scientist at Well be Health Tech</P>
                             <P class="subtitle">Develop and implement ETL processes to extract, transform, and load healthcare data from diverse sources. Collaborate with software engineers to design and develop data-driven applications and platforms. Apply statistical analysis and machine learning techniques to derive insights from healthcare data. Create visualizations and reports to communicate complex data insights to stakeholders. Ensure compliance with data privacy regulations and ethical considerations in handling sensitive healthcare data.</P>
                             <hr>
                             <h6 class="title text-danger">Aug 2022 - Dec 2022</h6>
-                            <P>Data Scientist</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P>Data Scientist at Penguin Technologies</P>
+                            <P class="subtitle">Develop and execute comprehensive testing strategies to ensure the quality and reliability of software applications and data-driven solutions. Collaborate with software development teams to identify and troubleshoot issues, providing data-driven insights for debugging and optimization. Utilize statistical analysis and data visualization techniques to analyze testing results, identify patterns, and drive improvements in software performance and functionality. Develop and maintain test scripts and automated testing frameworks to streamline the testing process and enhance efficiency. Continuously monitor and evaluate the performance of software applications, identifying areas for enhancement and proposing data-driven solutions for optimization.</P>
                             <hr>
                             <h6 class="title text-danger">Sept 2021 - Aug 2021</h6>
-                            <P>Scrum Master / Software Development</P>
+                            <P>Scrum Master / Software Development at Artificial Intelligence HUB</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             <hr>
                             <h6 class="title text-danger">Feb 2020 - Sept 2022</h6>
-                            <P>Physics and Math Teacher</P>
+                            <P>Physics and Math Teacher at Pedro Gomes School</P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                         </div>
                     </div>
