--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <hr>
                             <h6 class="title text-danger">Feb 2020 - Sept 2022</h6>
                             <P>Physics and Math Teacher at Pedro Gomes School</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">Planning and delivering engaging lessons: Designing lesson plans that effectively communicate physics and math concepts and engaging students in active learning. Assessing student understanding: Evaluating student progress through regular assessments, providing feedback, and identifying areas where additional support is needed. Creating a positive learning environment: Establishing a safe and inclusive classroom where students feel comfortable asking questions, sharing ideas, and collaborating with their peers. Differentiating instruction: Adapting teaching methods to accommodate diverse learning needs, providing additional challenges for advanced students and extra support for those who require it. Continuous professional development: Engaging in ongoing learning and staying updated with advancements in physics and math education, implementing new teaching strategies and resources to enhance student learning outcomes.</P>
                         </div>
                     </div>
                 </div>
