--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-vector icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Data Science</h6>
-                        <p class="subtitle"> exercitat Repellendus,  corrupt.</p>
+                        <p class="subtitle"> 
+                            Data science is the interdisciplinary field that utilizes scientific methods, processes, algorithms, and systems to extract knowledge and insights from structured and unstructured data.</p>
                         <hr>
                     </div>
                 </div>
