--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-bar-chart icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Data Analysis</h6>
-                        <p class="subtitle">Lorem ipsum dolor sit consectetur.</p>
+                        <p class="subtitle">Data analysis involves examining, cleaning, transforming, and interpreting data to uncover patterns, draw meaningful conclusions, and support decision-making processes.</p>
                         <hr>
                     </div>
                 </div>
