--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Machine Learning </h6>
-                        <p class="subtitle">voluptate commodi illo voluptatib.</p>
+                        <p class="subtitle">Machine learning is a field of artificial intelligence that focuses on developing algorithms and models capable of automatically learning and making predictions from data.</p>
                         <hr>
                     </div>
                 </div>
