--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Data Scientist / Data Engineer Located In Brazil</h5>
-                <p class="mt-20">I am a physicist-turned-data scientist, driven by an insatiable passion for science, statistics, programming languages, and artificial intelligence.With an curious mind and an analytical approach, I dive into complex datasets, unraveling hidden insights and unlocking the power of data. My proficiency in programming languages empowers you to develop innovative algorithms and models, revolutionizing the field of data science. My dedication to continuous learning keeps me at the forefront of technological advancements, fueling my love for exploring the frontiers of AI.</p>
+                <p class="mt-20">I am a physicist-turned-data scientist, driven by an insatiable passion for science, statistics, programming languages, and artificial intelligence.I have a curious mind and an analytical approach, I dive into complex datasets, unraveling hidden insights and unlocking the power of data. My proficiency in programming languages empowers you to develop innovative algorithms and models, revolutionizing the field of data science. My dedication to continuous learning keeps me at the forefront of technological advancements, fueling my love for exploring the frontiers of AI.</p>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
