--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Data Analysis</h5>
-                            <P class="subtitle">With my background in Physics and Statistics , I have a solid foundation in data analysis techniques. I can efficiently extract meaningful insights from complex datasets, enabling me to make data-driven decisions. Also, my proficiency in Python and SQL further enhances my ability to query and manipulate data efficiently.</P>
+                            <P class="subtitle">With my background in Physics and Statistics, I have a solid foundation in data analysis techniques. I can efficiently extract meaningful insights from complex datasets, enabling me to make data-driven decisions. Also, my proficiency in Python and SQL further enhances my ability to query and manipulate data efficiently.</P>
                         </div>
                     </div>
                 </div>
@@ -419,8 +419,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">Web Scraping project</h6>
+                                    <p class="subtitle">Selector, xpath, Response </p>
                                 </div>
                             </div>
                         </div>                                                     
