--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+ (123) 456-789</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+55 (21) 998048038</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -649,7 +649,7 @@
                                 <i class="ti-map-alt icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Address :<br> <span class="text-muted">12345 Fake ST NoWhere AB Country.</span></h6>
+                                <h6 class="d-inline">Address :<br> <span class="text-muted">Rua Brigadeiro Franco 2691.</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
