--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                                 <i class="ti-envelope icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Email :<br> <span class="text-muted">info@website.com</span></h6>
+                                <h6 class="d-inline">Email :<br> <span class="text-muted">cristiangrb@gmail.com</span></h6>
                             </div>
                         </div>
                         <ul class="social-icons pt-4">
