--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                                 <i class="ti-map-alt icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Address :<br> <span class="text-muted">Rua Brigadeiro Franco 2691.</span></h6>
+                                <h6 class="d-inline">Address :<br> <span class="text-muted">Rua Brigadeiro Franco, 2691. Curitiba/PR - Brazil</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
