--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
             <div class="row">
                 <div class="blog-card">
                     <div class="img-holder">
-                        <img src="assets/imgs/blog1.jpg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/luis.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">Article of optimal energy windows of radium223</h6>
@@ -641,7 +641,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+55 (21) 998048038</span></h6>
+                                <h6 class="d-inline">Phone :<br> <span class="text-muted">+55 (21) 998048038</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
