--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-scrap.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/web-scrap.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Deep Learning</h6>
-                                    <p class="subtitle">NLP!</p>
+                                    <h6 class="title">Web Scraping</h6>
+                                    <p class="subtitle">Scrapy, beautifulsoup, spider, Python</p>
                                 </div>
                             </div>
                         </div>                                                      
