--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                             </div>
                         </div>                                                    
                     </div> 
-                    <div class="col-md-6 col-lg-4 branding">
+                    <div class="col-md-6 col-lg-4 branding eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-scrap.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
                             <div class="content-holder">
