--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
                 <div class="blog-card">
-
+                    <div class="img-holder"></div>
                       <body>
                         <div class="slideshow-container">
                           <div class="slide fade">
